fsh-processor/antlr/FSHParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from fsh-processor/antlr/FSH.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Hl7.FhirShorthand.Serialization.antlr {
// Disable the warning for CLSCompliant
#pragma warning disable 3021

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class FSHParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		KW_ALIAS=1, KW_PROFILE=2, KW_EXTENSION=3, KW_INSTANCE=4, KW_INSTANCEOF=5, 
		KW_INVARIANT=6, KW_VALUESET=7, KW_CODESYSTEM=8, KW_RULESET=9, KW_MAPPING=10, 
		KW_LOGICAL=11, KW_RESOURCE=12, KW_PARENT=13, KW_ID=14, KW_TITLE=15, KW_DESCRIPTION=16, 
		KW_EXPRESSION=17, KW_XPATH=18, KW_SEVERITY=19, KW_USAGE=20, KW_SOURCE=21, 
		KW_TARGET=22, KW_CONTEXT=23, KW_CHARACTERISTICS=24, KW_MOD=25, KW_MS=26, 
		KW_SU=27, KW_TU=28, KW_NORMATIVE=29, KW_DRAFT=30, KW_FROM=31, KW_EXAMPLE=32, 
		KW_PREFERRED=33, KW_EXTENSIBLE=34, KW_REQUIRED=35, KW_CONTAINS=36, KW_NAMED=37, 
		KW_AND=38, KW_ONLY=39, KW_OR=40, KW_OBEYS=41, KW_TRUE=42, KW_FALSE=43, 
		KW_INCLUDE=44, KW_EXCLUDE=45, KW_CODES=46, KW_WHERE=47, KW_VSREFERENCE=48, 
		KW_SYSTEM=49, KW_EXACTLY=50, KW_INSERT=51, KW_CONTENTREFERENCE=52, EQUAL=53, 
		STAR=54, COLON=55, COMMA=56, ARROW=57, LPAREN=58, RPAREN=59, STRING=60, 
		MULTILINE_STRING=61, DOUBLE_BRACKET_STRING=62, NUMBER=63, UNIT=64, CODE=65, 
		CONCEPT_STRING=66, DATETIME=67, TIME=68, CARD=69, REFERENCE=70, CODEABLE_REFERENCE=71, 
		CANONICAL=72, CARET_SEQUENCE=73, REGEX=74, BLOCK_COMMENT=75, SEQUENCE=76, 
		WHITESPACE=77, LINE_COMMENT=78;
	public const int
		RULE_doc = 0, RULE_entity = 1, RULE_alias = 2, RULE_profile = 3, RULE_extension = 4, 
		RULE_logical = 5, RULE_resource = 6, RULE_sdMetadata = 7, RULE_sdRule = 8, 
		RULE_lrRule = 9, RULE_instance = 10, RULE_instanceMetadata = 11, RULE_instanceRule = 12, 
		RULE_invariant = 13, RULE_invariantMetadata = 14, RULE_invariantRule = 15, 
		RULE_valueSet = 16, RULE_vsMetadata = 17, RULE_vsRule = 18, RULE_codeSystem = 19, 
		RULE_csMetadata = 20, RULE_csRule = 21, RULE_ruleSet = 22, RULE_ruleSetRule = 23, 
		RULE_ruleSetParamList = 24, RULE_ruleSetParam = 25, RULE_ruleSetParamText = 26, 
		RULE_ruleSetParamPart = 27, RULE_paramRuleSetContent = 28, RULE_mapping = 29, 
		RULE_mappingMetadata = 30, RULE_mappingEntityRule = 31, RULE_parent = 32, 
		RULE_id = 33, RULE_title = 34, RULE_description = 35, RULE_expression = 36, 
		RULE_xpath = 37, RULE_severity = 38, RULE_instanceOf = 39, RULE_usage = 40, 
		RULE_source = 41, RULE_target = 42, RULE_context = 43, RULE_contextItem = 44, 
		RULE_characteristics = 45, RULE_cardRule = 46, RULE_flagRule = 47, RULE_valueSetRule = 48, 
		RULE_fixedValueRule = 49, RULE_containsRule = 50, RULE_onlyRule = 51, 
		RULE_obeysRule = 52, RULE_caretValueRule = 53, RULE_codeCaretValueRule = 54, 
		RULE_mappingRule = 55, RULE_insertRule = 56, RULE_ruleSetInsert = 57, 
		RULE_codeInsertRule = 58, RULE_addCRElementRule = 59, RULE_addElementRule = 60, 
		RULE_pathRule = 61, RULE_vsComponent = 62, RULE_vsConceptComponent = 63, 
		RULE_vsFilterComponent = 64, RULE_vsComponentFrom = 65, RULE_vsFromSystem = 66, 
		RULE_vsFromValueset = 67, RULE_vsFilterList = 68, RULE_vsFilterDefinition = 69, 
		RULE_vsFilterOperator = 70, RULE_vsFilterValue = 71, RULE_name = 72, RULE_path = 73, 
		RULE_caretPath = 74, RULE_flag = 75, RULE_strength = 76, RULE_value = 77, 
		RULE_item = 78, RULE_code = 79, RULE_concept = 80, RULE_quantity = 81, 
		RULE_ratio = 82, RULE_reference = 83, RULE_referenceType = 84, RULE_codeableReferenceType = 85, 
		RULE_canonical = 86, RULE_ratioPart = 87, RULE_bool = 88, RULE_targetType = 89, 
		RULE_mostAlphaKeywords = 90;
	public static readonly string[] ruleNames = {
		"doc", "entity", "alias", "profile", "extension", "logical", "resource", 
		"sdMetadata", "sdRule", "lrRule", "instance", "instanceMetadata", "instanceRule", 
		"invariant", "invariantMetadata", "invariantRule", "valueSet", "vsMetadata", 
		"vsRule", "codeSystem", "csMetadata", "csRule", "ruleSet", "ruleSetRule", 
		"ruleSetParamList", "ruleSetParam", "ruleSetParamText", "ruleSetParamPart", 
		"paramRuleSetContent", "mapping", "mappingMetadata", "mappingEntityRule", 
		"parent", "id", "title", "description", "expression", "xpath", "severity", 
		"instanceOf", "usage", "source", "target", "context", "contextItem", "characteristics", 
		"cardRule", "flagRule", "valueSetRule", "fixedValueRule", "containsRule", 
		"onlyRule", "obeysRule", "caretValueRule", "codeCaretValueRule", "mappingRule", 
		"insertRule", "ruleSetInsert", "codeInsertRule", "addCRElementRule", "addElementRule", 
		"pathRule", "vsComponent", "vsConceptComponent", "vsFilterComponent", 
		"vsComponentFrom", "vsFromSystem", "vsFromValueset", "vsFilterList", "vsFilterDefinition", 
		"vsFilterOperator", "vsFilterValue", "name", "path", "caretPath", "flag", 
		"strength", "value", "item", "code", "concept", "quantity", "ratio", "reference", 
		"referenceType", "codeableReferenceType", "canonical", "ratioPart", "bool", 
		"targetType", "mostAlphaKeywords"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "'?!'", "'MS'", "'SU'", "'TU'", "'N'", "'D'", "'from'", null, null, 
		null, null, "'contains'", "'named'", "'and'", "'only'", "'or'", "'obeys'", 
		"'true'", "'false'", "'include'", "'exclude'", "'codes'", "'where'", "'valueset'", 
		"'system'", null, "'insert'", "'contentReference'", "'='", null, "':'", 
		"','", "'->'", "'('", "')'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "KW_ALIAS", "KW_PROFILE", "KW_EXTENSION", "KW_INSTANCE", "KW_INSTANCEOF", 
		"KW_INVARIANT", "KW_VALUESET", "KW_CODESYSTEM", "KW_RULESET", "KW_MAPPING", 
		"KW_LOGICAL", "KW_RESOURCE", "KW_PARENT", "KW_ID", "KW_TITLE", "KW_DESCRIPTION", 
		"KW_EXPRESSION", "KW_XPATH", "KW_SEVERITY", "KW_USAGE", "KW_SOURCE", "KW_TARGET", 
		"KW_CONTEXT", "KW_CHARACTERISTICS", "KW_MOD", "KW_MS", "KW_SU", "KW_TU", 
		"KW_NORMATIVE", "KW_DRAFT", "KW_FROM", "KW_EXAMPLE", "KW_PREFERRED", "KW_EXTENSIBLE", 
		"KW_REQUIRED", "KW_CONTAINS", "KW_NAMED", "KW_AND", "KW_ONLY", "KW_OR", 
		"KW_OBEYS", "KW_TRUE", "KW_FALSE", "KW_INCLUDE", "KW_EXCLUDE", "KW_CODES", 
		"KW_WHERE", "KW_VSREFERENCE", "KW_SYSTEM", "KW_EXACTLY", "KW_INSERT", 
		"KW_CONTENTREFERENCE", "EQUAL", "STAR", "COLON", "COMMA", "ARROW", "LPAREN", 
		"RPAREN", "STRING", "MULTILINE_STRING", "DOUBLE_BRACKET_STRING", "NUMBER", 
		"UNIT", "CODE", "CONCEPT_STRING", "DATETIME", "TIME", "CARD", "REFERENCE", 
		"CODEABLE_REFERENCE", "CANONICAL", "CARET_SEQUENCE", "REGEX", "BLOCK_COMMENT", 
		"SEQUENCE", "WHITESPACE", "LINE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "FSH.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static FSHParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public FSHParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public FSHParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class DocContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(FSHParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public EntityContext[] entity() {
			return GetRuleContexts<EntityContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public EntityContext entity(int i) {
			return GetRuleContext<EntityContext>(i);
		}
		public DocContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_doc; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFSHListener typedListener = listener as IFSHListener;
			if (typedListener != null) typedListener.EnterDoc(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFSHListener typedListener = listener as IFSHListener;
			if (typedListener != null) typedListener.ExitDoc(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFSHVisitor<TResult> typedVisitor = visitor as IFSHVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDoc(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DocContext doc() {
		DocContext _localctx = new DocContext(Context, State);
		EnterRule(_localctx, 0, RULE_doc);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 185;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8158L) != 0)) {
				{
				{
				State = 182;
				entity();
				}
				}
				State = 187;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 188;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EntityContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public AliasContext alias() {
			return GetRuleContext<AliasContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ProfileContext profile() {
			return GetRuleContext<ProfileContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExtensionContext extension() {
			return GetRuleContext<ExtensionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public InvariantContext invariant() {
			return GetRuleContext<InvariantContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public InstanceContext instance() {
			return GetRuleContext<InstanceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ValueSetContext valueSet() {
			return GetRuleContext<ValueSetContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CodeSystemContext codeSystem() {
			return GetRuleContext<CodeSystemContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RuleSetContext ruleSet() {
			return GetRuleContext<RuleSetContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MappingContext mapping() {
			return GetRuleContext<MappingContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LogicalContext logical() {
			return GetRuleContext<LogicalContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ResourceContext resource() {
			return GetRuleContext<ResourceContext>(0);
		}
		public EntityContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_entity; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFSHListener typedListener = listener as IFSHListener;
			if (typedListener != null) typedListener.EnterEntity(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFSHListener typedListener = listener as IFSHListener;
			if (typedListener != null) typedListener.ExitEntity(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFSHVisitor<TResult> typedVisitor = visitor as IFSHVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEntity(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EntityContext entity() {
		EntityContext _localctx = new EntityContext(Context, State);
		EnterRule(_localctx, 2, RULE_entity);
		try {
			State = 201;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case KW_ALIAS:
				EnterOuterAlt(_localctx, 1);
				{
				State = 190;
				alias();
				}
				break;
			case KW_PROFILE:
				EnterOuterAlt(_localctx, 2);
				{
				State = 191;
				profile();
				}
				break;
			case KW_EXTENSION:
				EnterOuterAlt(_localctx, 3);
				{
				State = 192;
				extension();
				}
				break;
			case KW_INVARIANT:
				EnterOuterAlt(_localctx, 4);
				{
				State = 193;
				invariant();
				}
				break;
			case KW_INSTANCE:
				EnterOuterAlt(_localctx, 5);
				{
				State = 194;
				instance();
				}
				break;
			case KW_VALUESET:
				EnterOuterAlt(_localctx, 6);
				{
				State = 195;
				valueSet();
				}
				break;
			case KW_CODESYSTEM:
				EnterOuterAlt(_localctx, 7);
				{
				State = 196;
				codeSystem();
				}
				break;
			case KW_RULESET:
				EnterOuterAlt(_localctx, 8);
				{
				State = 197;
				ruleSet();
				}
				break;
			case KW_MAPPING:
				EnterOuterAlt(_localctx, 9);
				{
				State = 198;
				mapping();
				}
				break;
			case KW_LOGICAL:
				EnterOuterAlt(_localctx, 10);
				{
				State = 199;
				logical();
				}
				break;
			case KW_RESOURCE:
				EnterOuterAlt(_localctx, 11);
				{
				State = 200;
				resource();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AliasContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode KW_ALIAS() { return GetToken(FSHParser.KW_ALIAS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public NameContext name() {
			return GetRuleContext<NameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUAL() { return GetToken(FSHParser.EQUAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEQUENCE() { return GetToken(FSHParser.SEQUENCE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CODE() { return GetToken(FSHParser.CODE, 0); }
		public AliasContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_alias; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFSHListener typedListener = listener as IFSHListener;
			if (typedListener != null) typedListener.EnterAlias(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFSHListener typedListener = listener as IFSHListener;
			if (typedListener != null) typedListener.ExitAlias(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFSHVisitor<TResult> typedVisitor = visitor as IFSHVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAlias(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AliasContext alias() {
		AliasContext _localctx = new AliasContext(Context, State);
		EnterRule(_localctx, 4, RULE_alias);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 203;
			Match(KW_ALIAS);
			State = 204;
			name();
			State = 205;
			Match(EQUAL);
			State = 206;
			_la = TokenStream.LA(1);
			if ( !(_la==CODE || _la==SEQUENCE) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProfileContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode KW_PROFILE() { return GetToken(FSHParser.KW_PROFILE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public NameContext name() {
			return GetRuleContext<NameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SdMetadataContext[] sdMetadata() {
			return GetRuleContexts<SdMetadataContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SdMetadataContext sdMetadata(int i) {
			return GetRuleContext<SdMetadataContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SdRuleContext[] sdRule() {
			return GetRuleContexts<SdRuleContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SdRuleContext sdRule(int i) {
			return GetRuleContext<SdRuleContext>(i);
		}
		public ProfileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_profile; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFSHListener typedListener = listener as IFSHListener;
			if (typedListener != null) typedListener.EnterProfile(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFSHListener typedListener = listener as IFSHListener;
			if (typedListener != null) typedListener.ExitProfile(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFSHVisitor<TResult> typedVisitor = visitor as IFSHVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProfile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProfileContext profile() {
		ProfileContext _localctx = new ProfileContext(Context, State);
		EnterRule(_localctx, 6, RULE_profile);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 208;
			Match(KW_PROFILE);
			State = 209;
			name();
			State = 211;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 210;
				sdMetadata();
				}
				}
				State = 213;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 122880L) != 0) );
			State = 218;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==STAR) {
				{
				{
				State = 215;
				sdRule();
				}
				}
				State = 220;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExtensionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode KW_EXTENSION() { return GetToken(FSHParser.KW_EXTENSION, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public NameContext name() {
			return GetRuleContext<NameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SdMetadataContext[] sdMetadata() {
			return GetRuleContexts<SdMetadataContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SdMetadataContext sdMetadata(int i) {
			return GetRuleContext<SdMetadataContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ContextContext[] context() {
			return GetRuleContexts<ContextContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ContextContext context(int i) {
			return GetRuleContext<ContextContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SdRuleContext[] sdRule() {
			return GetRuleContexts<SdRuleContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SdRuleContext sdRule(int i) {
			return GetRuleContext<SdRuleContext>(i);
		}
		public ExtensionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_extension; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFSHListener typedListener = listener as IFSHListener;
			if (typedListener != null) typedListener.EnterExtension(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFSHListener typedListener = listener as IFSHListener;
			if (typedListener != null) typedListener.ExitExtension(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFSHVisitor<TResult> typedVisitor = visitor as IFSHVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExtension(this);
			else return visitor.VisitChildren(this);
		}
	}
